Fix too long file name issue

--- a/resources/css/appMainView.scss
+++ b/resources/css/appMainView.scss
@@ -200,6 +200,8 @@
         text-align: center;
         color: #808080;
         font-size: 16px;
+        word-break: break-all;
+        padding: 16px;
     }
 }
 
